Revert "Merge pull request #95 from SentryPrimies/telescopic-contractor-baton"
This reverts commit 5a0e582227e6d0b2c9b42ac55c3467f31ad9e585, reversing
changes made to 090e4acd4cb9a71dff79a12cce477d5492a34655.

# Conflicts:
#	Resources/Prototypes/Imperial/Batonening/batons.yml

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -69,8 +69,7 @@
       - id: BoxSurvival
       - id: Flash
       #- name: StationCharter
-      - id: Telebaton #Imperial
-
+      #- name: TelescopicBaton
 - type: entity
   noSpawn: true
   parent: ClothingBackpackEngineering
@@ -80,7 +79,7 @@
     contents:
       - id: BoxSurvivalEngineering
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -91,7 +90,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -102,7 +101,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -113,7 +112,7 @@
     contents:
       - id: BoxSurvivalMedical
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -124,7 +123,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
