--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
@@ -77,7 +77,7 @@
       - id: BoxSurvival
       - id: Flash
       #- name: StationCharter
-      - id: Telebaton #Imperial
+      #- name: TelescopicBaton
 - type: entity
   noSpawn: true
   parent: ClothingBackpackDuffelEngineering
@@ -87,7 +87,7 @@
     contents:
       - id: BoxSurvivalEngineering
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -98,7 +98,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -109,7 +109,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -120,7 +120,7 @@
     contents:
       - id: BoxSurvivalMedical
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
@@ -131,7 +131,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      - id: Telebaton #Imperial
+      #- id: TelescopicBaton
 
 - type: entity
   noSpawn: true
