--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_bottles.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_bottles.yml
@@ -746,7 +746,7 @@
   - type: Drink
   - type: Label
   #Империал перевод
-    currentLabel: сахао
+    currentLabel: сахар
 
 - type: entity
   parent: DrinkBottlePlasticBaseFull
