--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -84,6 +84,7 @@
   - SecurityOfficer
   - Warden
   - SeniorOfficer # Imperial nuh uh
+  - Brigmedic # Imperial
 
 - type: department
   id: Science
