Revert "detective patch (#24739)"
This reverts commit 8ef69ff2e1f83b08c9585d2517e917075c8271cf.

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
@@ -35,7 +35,7 @@
   components:
   - type: StorageFill
     contents:
-      - id: BoxSurvival
+      - id: BoxSurvivalSecurity
       - id: ForensicPad
       - id: ForensicScanner
 
