--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -558,9 +558,9 @@
   suffix: rusted
   components:
   - type: Sprite
-    sprite: Structures/Walls/solidrust.rsi # Imperial
+    sprite: Structures/Walls/solid_rust.rsi
   - type: Icon
-    sprite: Structures/Walls/solidrust.rsi # Imperial
+    sprite: Structures/Walls/solid_rust.rsi
     state: rgeneric
   - type: Construction
     graph: Girder
@@ -902,9 +902,9 @@
   suffix: rusted
   components:
   - type: Sprite
-    sprite: Structures/Walls/solidrust.rsi # Imperial
+    sprite: Structures/Walls/solid_rust.rsi
   - type: Icon
-    sprite: Structures/Walls/solidrust.rsi # Imperial
+    sprite: Structures/Walls/solid_rust.rsi
     state: full
   - type: Construction
     graph: Girder
