--- a/Resources/Prototypes/Imperial/DualToySword/dualtoy.yml
+++ b/Resources/Prototypes/Imperial/DualToySword/dualtoy.yml
@@ -1,24 +1,40 @@
 - type: entity
   name: dual toy sword
-  parent: BaseItem
+  parent: EnergySword
   id: DualToySword
-  description:
   components:
-  - type: Wieldable
-    wieldTime: 0
   - type: EnergySword
-    litDamageBonus:
+    isSharp: false
+  - type: ItemToggle
+    soundActivate:
+      path: /Audio/Weapons/ebladeon.ogg
+      params:
+        volume: 3
+    soundDeactivate:
+      path: /Audio/Weapons/ebladeoff.ogg
+      params:
+        volume: 3
+  - type: ItemToggleMeleeWeapon
+    activatedSoundOnSwing:
+      path: /Audio/Weapons/eblademiss.ogg
+      params:
+        volume: 3
+        variation: 0.250
+    activatedDamage:
         types:
-            Slash: 0
-            Heat: 0
-            Structural: 0
             Blunt: 0
-    litDisarmMalus: 0
+  - type: ItemToggleActiveSound
+    activeSound:
+      path: /Audio/Weapons/ebladehum.ogg
+      params:
+        volume: 3
+  - type: ItemToggleDisarmMalus
+    activatedDisarmMalus: 0
+  - type: Wieldable
   - type: MeleeWeapon
+    wideAnimationRotation: -135
     attackRate: 1.5
     angle: 100
-    soundHit:
-      path: /Audio/Weapons/eblade1.ogg
     damage:
       types:
         Blunt: 0
@@ -32,12 +48,10 @@
         shader: unshaded
         map: [ "blade" ]
   - type: Item
-    size: Normal
-    sprite: Objects/Weapons/Melee/e_sword_double.rsi
-  - type: Construction
-    graph: DualToySword
-    node: DualToySword
-  - type: Appearance
+    size: Small
+    sprite: Objects/Weapons/Melee/e_sword_double-inhands.rsi
+  - type: UseDelay
+    delay: 1
   - type: ToggleableLightVisuals
     spriteLayer: blade
     inhandVisuals:
@@ -47,11 +61,6 @@
       right:
       - state: inhand-right-blade
         shader: unshaded
-  - type: UseDelay
-    delay: 1.0
-  - type: PointLight
-    enabled: false
-    radius: 2
-    energy: 2
-    color: white
-    netsync: false
+  - type: Construction
+    graph: DualToySword
+    node: DualToySword
