--- a/Resources/Prototypes/Imperial/Modsuits/Clothing/control.yml
+++ b/Resources/Prototypes/Imperial/Modsuits/Clothing/control.yml
@@ -557,6 +557,11 @@
     autoRot: true
   - type: StaticPrice
     price: 150000
+  - type: Speech # Взрывные РИГ'и
+    speechSounds: Pai
+  - type: ClothingFactionExplosion # Взрывные РИГ'и
+    friendlyFaction: DeathSquad
+    chance: 1
 
 - type: entity
   parent: ClothingControlModsuitBase
