--- a/Resources/Prototypes/Imperial/ERT_SniperRifle/ert_sniper_projectile.yml
+++ b/Resources/Prototypes/Imperial/ERT_SniperRifle/ert_sniper_projectile.yml
@@ -12,3 +12,21 @@
   impactFlash:
     sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
     state: impact_blue
+
+##DeathSquad start
+- type: hitscan #Новый хитскан для пушек дедов
+  id: PulseDeathSquad
+  damage:
+    types:
+      Heat: 40
+      Structure: 25
+  muzzleFlash:
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
+    state: muzzle_blue
+  travelFlash:
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
+    state: beam_blue
+  impactFlash:
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
+    state: impact_blue
+##DeathSquad end
