--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/tables.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/tables.yml
@@ -31,85 +31,6 @@
               amount: 1
               doAfter: 1
 
-        # Imperial coffee tables start
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SnapToGrid
-              southRotation: true
-          steps:
-            - material: MetalRod
-              amount: 2
-              doAfter: 1
-
-
-    - node: CoffeeTableFrame
-      entity: CoffeeTableFrame
-      edges:
-        - to: start
-          completed:
-            - !type:SpawnPrototype
-                prototype: PartRodMetal
-                amount: 2
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-        - to: CoffeeTableWood
-          steps:
-            - material: WoodPlank
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableSteel
-          steps:
-            - material: Steel
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableReinforced
-          steps:
-            - material: Plasteel
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableGlass
-          steps:
-            - material: Glass
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTablePlasma
-          steps:
-            - material: PlasmaGlass
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableReinforcedGlass
-          steps:
-            - material: ReinforcedGlass
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableUranium
-          steps:
-            - material: UraniumGlass
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableReinforcedUranium
-          steps:
-            - material: ReinforcedUraniumGlass
-              amount: 1
-              doAfter: 1
-
-        - to: CoffeeTableReinforcedPlasma
-          steps:
-            - material: ReinforcedPlasmaGlass
-              amount: 1
-              doAfter: 1
-        # Imperial coffee tables end
-
-
     - node: TableFrame
       entity: TableFrame
       edges:
@@ -157,7 +78,25 @@
             - material: WoodPlank
               amount: 1
               doAfter: 1
+#Imperial Space
+        - to: TableUraniumGlass
+          steps:
+            - material: UraniumGlass
+              amount: 1
+              doAfter: 1
 
+        - to: TableUraniumGlassReinforced
+          steps:
+            - material: ReinforcedUraniumGlass
+              amount: 1
+              doAfter: 1
+
+        - to: TablePlasmaGlassReinforced
+          steps:
+            - material: ReinforcedPlasmaGlass
+              amount: 1
+              doAfter: 1
+#Imperial Space END
 
     - node: CounterWoodFrame
       entity: CounterWoodFrame
@@ -271,73 +210,73 @@
             - material: Cloth
               amount: 1
               doAfter: 1
-              
+
         - to: TableFancyBlack
-          steps: 
+          steps:
             - tag: CarpetBlack
               name: black carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-black
-              
+
         - to: TableFancyBlue
-          steps: 
+          steps:
             - tag: CarpetBlue
               name: blue carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-blue
-              
+
         - to: TableFancyCyan
-          steps: 
+          steps:
             - tag: CarpetCyan
               name: cyan carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-cyan
-              
+
         - to: TableFancyGreen
-          steps: 
+          steps:
             - tag: CarpetGreen
               name: green carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-green
-              
+
         - to: TableFancyOrange
-          steps: 
+          steps:
             - tag: CarpetOrange
               name: orange carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-orange
-              
+
         - to: TableFancyPurple
-          steps: 
+          steps:
             - tag: CarpetPurple
               name: purple carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-purple
-                
+
         - to: TableFancyPink
-          steps: 
+          steps:
             - tag: CarpetPink
               name: pink carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-pink
-              
+
         - to: TableFancyRed
-          steps: 
+          steps:
             - tag: CarpetRed
               name: red carpet
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-red
-              
+
         - to: TableFancyWhite
-          steps: 
+          steps:
             - tag: CarpetWhite
               name: white carpet
               icon:
@@ -355,7 +294,7 @@
           steps:
             - tool: Prying
               doAfter: 1
-              
+
     - node: TableFancyBlack
       entity: TableFancyBlack
       edges:
@@ -367,7 +306,7 @@
           steps:
             - tool: Prying
               doAfter: 1
-              
+
     - node: TableFancyBlue
       entity: TableFancyBlue
       edges:
@@ -379,7 +318,7 @@
           steps:
             - tool: Prying
               doAfter: 1
-              
+
     - node: TableFancyCyan
       entity: TableFancyCyan
       edges:
@@ -488,7 +427,7 @@
             - tool: Prying
               doAfter: 1
 
-    #Imperial start
+#Imperial start
     - node: TableUraniumGlass
       entity: TableUraniumGlass
       edges:
@@ -501,7 +440,7 @@
             - tool: Anchoring
               doAfter: 1
 
-    - node: TableRUraniumGlass
+    - node: TableUraniumGlassReinforced
       entity: TableReinforcedUraniumGlass
       edges:
         - to: TableFrame
@@ -513,7 +452,7 @@
             - tool: Anchoring
               doAfter: 1
 
-    - node: TableRPlasmaGlass
+    - node: TablePlasmaGlassReinforced
       entity: TableReinforcedPlasmaGlass
       edges:
         - to: TableFrame
@@ -524,114 +463,4 @@
           steps:
             - tool: Anchoring
               doAfter: 1
-
-    # Coffee tables
-
-    - node: CoffeeTableWood
-      entity: CoffeeTableWood
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: MaterialWoodPlank1
-              amount: 1
-          steps:
-            - tool: Prying
-              doAfter: 1
-
-    - node: CoffeeTableSteel
-      entity: CoffeeTableSteel
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetSteel1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTableReinforced
-      entity: CoffeeTableReinforced
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetPlasteel1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTableGlass
-      entity: CoffeeTableGlass
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetGlass1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTablePlasma
-      entity: CoffeeTablePlasma
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetPGlass1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTableReinforcedGlass
-      entity: CoffeeTableReinforcedGlass
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetRGlass1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTableUranium
-      entity: CoffeeTableUranium
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetUGlass1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTableReinforcedUranium
-      entity: CoffeeTableReinforcedUranium
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetRUGlass1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-
-    - node: CoffeeTableReinforcedPlasma
-      entity: CoffeeTableReinforcedPlasma
-      edges:
-        - to: CoffeeTableFrame
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetRPGlass1
-              amount: 1
-          steps:
-            - tool: Anchoring
-              doAfter: 1
-    #Imperial end
+#Imperial END
