--- a/Resources/Prototypes/Imperial/TFG/GoldenLife/presentable_things.yml
+++ b/Resources/Prototypes/Imperial/TFG/GoldenLife/presentable_things.yml
@@ -90,11 +90,11 @@
     - state: sign_imperial
   - type: Item
     sprite: Imperial/TFG/GoldenLife/presentableBox.rsi
-    size: Normal
+    size: Huge
   - type: Storage
-    maxItemSize: Normal
+    maxItemSize: Small
     grid:
-    - 0,0,2,2
+    - 0,0,3,2
   - type: ContainerContainer
     containers:
       storagebase: !type:Container
