--- a/Resources/Prototypes/Imperial/TFG/Weapon/M2108.yml
+++ b/Resources/Prototypes/Imperial/TFG/Weapon/M2108.yml
@@ -58,6 +58,13 @@
     layers:
     - state: black
     - state: sign_imperial
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,1,0
+    - 0,0,0,1
+    - 3,0,4,0
+    - 3,1,4,1
   - type: StorageFill
     contents:
     - id: WeaponPistolM2108Award
